# racknerd-stock-monitor

./: .gitignore  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: pages.yml
src/: catalog.py  settings.py
src/deploy/: scheduler.py
src/racknerd/: __init__.py  catalog.py  cli.py  models.py  scraper.py  storage.py
src/tests/fixtures/: confproduct_fixture.html  store_catalog.html
tests/: test_scraper.py
tests/fixtures/: store_index_categories.html
web/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web/src/: constants.ts  data.test.ts  data.ts  main.ts  style.css
